--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,26 @@ services:
       - "8000:80"
     depends_on:
       - db
-      
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
+    volumes:
+      - .:/var/www/html
+  
   db:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_DATABASE: '${DB_DATABASE}'
-      MYSQL_USER: '${DB_USERNAME}'
-      MYSQL_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./BancoDeDados/cantodaspalavras.sql:/docker-entrypoint-initdb.d/cantodaspalavras.sql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -25,8 +33,8 @@ services:
       - "8080:80"
     environment:
       PMA_HOST: ${DB_HOST}
-      PMA_USER: '${DB_USERNAME}'
-      PMA_PASSWORD: '${DB_PASSWORD}'
+      PMA_USER: ${DB_USERNAME}
+      PMA_PASSWORD: ${DB_PASSWORD}
     depends_on:
       - db
 
