--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-.env
-env
+# Em uma situação real, o .env não seria enviado mas para praticidade do projeto, está aberto !! 
+
+# In a real situation, the .env would not be sent but for the practicality of the project, it is open!!
+
+# .env
